# s3process

./: .gitignore  README.md  pyproject.toml  requirements.txt
docker/: Dockerfile  aws.env  docker-compose.yaml
lambda/: street_lights_api_lambda.py  ubiquita_lambda.py
src/s3process/: __init__.py  events.py  results.py  street_lights.py  times.py  twilight.py  ubiquita.py
tests/: test_results.py
