[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "s3process"
version = "0.0.1"
authors = [
  { name="Kevin Mercy", email="kevn.mercy@gmail.com" },
]
description = "Processing csv files from S3 for PhotmetricsAI."
readme = "README.md"
dependencies = [
  "boto3",
  "pandas",
  "requests",
  "pytest",
]